[gd_scene load_steps=14 format=3 uid="uid://doyct1xu46gwj"]

[ext_resource type="PackedScene" uid="uid://dn7qe2mdxtpmr" path="res://sub_scenes/collected_builder_gem.tscn" id="1_6em1y"]
[ext_resource type="Script" path="res://sub_scenes/scripts/gem_pouch.gd" id="1_m4ymf"]
[ext_resource type="PackedScene" uid="uid://cddeyc73rgykw" path="res://sub_scenes/collected_magical_crystal.tscn" id="2_yrwed"]
[ext_resource type="FontFile" uid="uid://cdccw3poh5c27" path="res://fonts/AlphaProta-G33Vm.ttf" id="3_itbpt"]

[sub_resource type="Gradient" id="Gradient_h2dk4"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.196078)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_02qcp"]
gradient = SubResource("Gradient_h2dk4")
width = 1920
height = 48

[sub_resource type="World3D" id="World3D_t6ua0"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2wvu1"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_tw8ea"]
sky_material = SubResource("ProceduralSkyMaterial_2wvu1")

[sub_resource type="Environment" id="Environment_5kqve"]
background_mode = 2
sky = SubResource("Sky_tw8ea")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_mjoah"]
line_spacing = 0.0
font = ExtResource("3_itbpt")
font_size = 36
font_color = Color(0.0313726, 0.937255, 0, 1)
outline_size = 2
outline_color = Color(0, 0.854902, 0.247059, 1)
shadow_size = 12
shadow_color = Color(0.823529, 1, 0.788235, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="World3D" id="World3D_tgath"]

[sub_resource type="LabelSettings" id="LabelSettings_vdcxt"]
line_spacing = 0.0
font = ExtResource("3_itbpt")
font_size = 36
font_color = Color(0.419608, 0, 0.647059, 1)
outline_size = 2
outline_color = Color(1, 0.556863, 1, 1)
shadow_size = 12
shadow_color = Color(1, 0.933333, 1, 1)
shadow_offset = Vector2(0, 0)

[node name="GemPouch" type="Node2D"]
position = Vector2(0, 648)
script = ExtResource("1_m4ymf")
metadata/_edit_vertical_guides_ = [168.0, 224.0]
metadata/_edit_horizontal_guides_ = [34.0, 448.0]

[node name="BuilderGems" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = -152.0
offset_right = 136.0
offset_bottom = -112.0
metadata/_edit_use_anchors_ = true

[node name="overlay" type="Sprite2D" parent="BuilderGems"]
position = Vector2(100, -12)
scale = Vector2(0.0958333, 1.5)
texture = SubResource("GradientTexture2D_02qcp")

[node name="SubViewportContainer" type="SubViewportContainer" parent="BuilderGems"]
layout_mode = 0
offset_left = 128.0
offset_top = -40.0
offset_right = 178.0
offset_bottom = 21.0
rotation = -0.111136
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="BuilderGems/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_t6ua0")
transparent_bg = true
handle_input_locally = false
size = Vector2i(50, 61)
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="BuilderGems/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 1.32666, 0)
shadow_enabled = true

[node name="collected-builder-gem" parent="BuilderGems/SubViewportContainer/SubViewport" instance=ExtResource("1_6em1y")]
transform = Transform3D(0.55406, 0, -0.832477, 0, 1, 0, 0.832477, 0, 0.55406, 0.00540447, 0, -0.00540436)

[node name="Camera3D" type="Camera3D" parent="BuilderGems/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0.28)

[node name="WorldEnvironment" type="WorldEnvironment" parent="BuilderGems/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_5kqve")

[node name="Label" type="Label" parent="BuilderGems"]
layout_mode = 0
offset_left = 16.0
offset_top = -32.0
offset_right = 124.0
offset_bottom = 5.0
text = "1500"
label_settings = SubResource("LabelSettings_mjoah")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MagicalGems" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 80.0
offset_top = -104.0
offset_right = 184.0
offset_bottom = -64.0
metadata/_edit_use_anchors_ = true

[node name="overlay" type="Sprite2D" parent="MagicalGems"]
position = Vector2(52, 24)
scale = Vector2(0.0958333, 1.5)
texture = SubResource("GradientTexture2D_02qcp")

[node name="SubViewportContainer" type="SubViewportContainer" parent="MagicalGems"]
layout_mode = 0
offset_left = 80.0
offset_top = -8.0
offset_right = 146.0
offset_bottom = 47.0
rotation = 0.144634
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="MagicalGems/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_tgath")
transparent_bg = true
handle_input_locally = false
size = Vector2i(66, 55)
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MagicalGems/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 1.32666, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="MagicalGems/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01, -0.03, 0.25)

[node name="WorldEnvironment" type="WorldEnvironment" parent="MagicalGems/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_5kqve")

[node name="collected-magical-crystal" parent="MagicalGems/SubViewportContainer/SubViewport" instance=ExtResource("2_yrwed")]

[node name="Label" type="Label" parent="MagicalGems"]
layout_mode = 0
offset_left = -32.0
offset_right = 76.0
offset_bottom = 37.0
text = "1500"
label_settings = SubResource("LabelSettings_vdcxt")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true
